acvm-repo/msgpack_tagged/tests/compile_fail/enum_variant_tag_in_reserved.rs
//! A variant's `#[tag(N)]` cannot reuse a tag listed in
//! `#[tagged(reserved(...))]` — the reserved list explicitly retires those
//! tags from being assigned to anything.

use msgpack_tagged::MsgpackTagged;

#[derive(MsgpackTagged)]
#[tagged(reserved(1))]
enum Choice {
    #[tag(0)]
    First,
    #[tag(1)]
    Second,
}

fn main() {}
